fix spacing issue on hints lists

--- a/src/style/_custom.scss
+++ b/src/style/_custom.scss
@@ -476,7 +476,7 @@ section .hints {
   padding: calc(var(--space-3) + 3px) calc(var(--space-3) + 5px);
   background: #e9eef4;
   border-radius: var(--bdrs-l);
-  margin-block-start: calc(var(--space-3) * -1);
+  margin-block-start: calc(var(--space-4) * -1);
 }
 
 .exercise-content {
